@@ -102,6 +102,16 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-tomcat</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-undertow</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -292,6 +302,8 @@
                                 <javaOption>-XX:G1PeriodicGCInterval=5000</javaOption>
                                 <javaOption>-XX:GCTimeRatio=1</javaOption>
                                 <javaOption>-XX:MaxGCPauseMillis=2000</javaOption>
+                                <javaOption>-Xverify:none</javaOption> <!-- reduce VM.native_memory Class by 6MB -->
+                                <javaOption>-XX:-TieredCompilation</javaOption> <!-- reduce VM.native_memory Code by 20MB -->
                             </javaOptions>
                             <arguments>
                                 <argument>--spring.config.additional-location=file:./app/</argument>
